@@ -19,7 +19,6 @@ License for more details.
 You should have received a copy of the GNU Lesser General Public License
 along with the GNU MP Library.  If not, see http://www.gnu.org/licenses/.  */
 
-#include <stdio.h> /* for NULL */
 #include "gmp.h"
 #include "gmp-impl.h"
 
@@ -27,10 +26,10 @@ void
 mpz_sqrtrem (mpz_ptr root, mpz_ptr rem, mpz_srcptr op)
 {
   mp_size_t op_size, root_size, rem_size;
-  mp_ptr root_ptr, op_ptr;
+  mp_ptr root_ptr, op_ptr, rem_ptr;
 
   op_size = SIZ (op);
-  if (op_size <= 0)
+  if (UNLIKELY (op_size <= 0))
     {
       if (op_size < 0)
 	SQRT_OF_NEGATIVE;
@@ -39,48 +38,35 @@ mpz_sqrtrem (mpz_ptr root, mpz_ptr rem, mpz_srcptr op)
       return;
     }
 
-  MPZ_REALLOC (rem, op_size);
+  rem_ptr = MPZ_REALLOC (rem, op_size);
 
   /* The size of the root is accurate after this simple calculation.  */
   root_size = (op_size + 1) / 2;
   SIZ (root) = root_size;
 
-  root_ptr = PTR (root);
   op_ptr = PTR (op);
 
-  if (ALLOC (root) < root_size)
+  if (root == op)
     {
-      /* From size relations, we can tell ROOT != OP.  */
-      ASSERT (root_ptr != op_ptr);
+      /* Allocate temp space for the root, which we then copy to the
+	 shared OP/ROOT variable.  */
+      TMP_DECL;
+      TMP_MARK;
 
-      root_ptr = __GMP_REALLOCATE_FUNC_LIMBS (root_ptr, ALLOC (root), root_size);
-      ALLOC (root) = root_size;
-      PTR (root) = root_ptr;
+      root_ptr = TMP_ALLOC_LIMBS (root_size);
+      rem_size = mpn_sqrtrem (root_ptr, rem_ptr, op_ptr, op_size);
+
+      if (rem != root)	/* Don't overwrite remainder */
+	MPN_COPY (op_ptr, root_ptr, root_size);
+
+      TMP_FREE;
     }
   else
     {
-      if (root_ptr == op_ptr)
-	{
-	  /* Allocate temp space for the root, which we then copy to the
-	     shared OP/ROOT variable.  */
-	  mp_ptr p;
-	  TMP_DECL;
-	  TMP_MARK;
+      root_ptr = MPZ_REALLOC (root, root_size);
 
-	  p = TMP_ALLOC_LIMBS (root_size);
-	  rem_size = mpn_sqrtrem (p, PTR (rem), root_ptr, op_size);
-
-	  if (rem != root)	/* Don't overwrite remainder */
-	    MPN_COPY (root_ptr, p, root_size);
-
-	  TMP_FREE;
-	  goto done;
-	}
+      rem_size = mpn_sqrtrem (root_ptr, rem_ptr, op_ptr, op_size);
     }
-
-  rem_size = mpn_sqrtrem (root_ptr, PTR (rem), op_ptr, op_size);
-
- done:
 
   /* Write remainder size last, to make this function give only the square root
      remainder, when passed ROOT == REM.  */
