@@ -1,3 +1,8 @@
+2012-05-23 Marco Bodrato <bodrato@mail.dm.unipi.it>
+
+	* mpz/sqrt.c: Further simplify.
+	* mpz/sqrtrem.c: Likewise.
+
 2012-05-22  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpz/sqrt.c: Allocate less for overlapping operands, simplify.
